Works with weather forecast

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     },
     "require": {
-        "php": "^7.2"
+        "php": "^7.2",
+        "psr/log": "^1"
     },
     "require-dev": {
         "anax/di": "^2.0.0@alpha",
